# screenpipe

./: TESTING.md  test_fts.rs  test_sanitize  test_sanitize.rs
.github/workflows/: release-app.yml  release-enterprise-windows.yml
apps/screenpipe-app-tauri/components/: update-banner.tsx
apps/screenpipe-app-tauri/lib/: native-timeline.ts
apps/screenpipe-app-tauri/src-tauri/: Cargo.toml  build.rs
crates/screenpipe-a11y/examples/: linux_e2e.rs  linux_test.rs
crates/screenpipe-audio/examples/: screenpipe-audio.rs
crates/screenpipe-audio/src/: lib.rs
crates/screenpipe-config/src/: persistence.rs  recording.rs
crates/screenpipe-connect/src/: mdns.rs
crates/screenpipe-core/src/: ffmpeg.rs  language.rs  lib.rs  permissions.rs
crates/screenpipe-db/src/: db.rs  lib.rs
crates/screenpipe-db/tests/: speaker_benchmark.rs
crates/screenpipe-engine/src/: lib.rs  meeting_detector.rs  server.rs  snapshot_compaction.rs
crates/screenpipe-engine/tests/: audio_vision_integration_test.rs  consumer_sleep_test.rs  endpoint_test.rs  first_frames_test.rs  frame_extraction_test.rs  stream_frames_test.rs  tags_test.rs  timeline_refresh_bug_test.rs  video_cache_test.rs  video_utils_test.rs  websockets_test.rs
crates/screenpipe-integrations/: Cargo.toml
crates/screenpipe-integrations/src/: lib.rs
crates/screenpipe-integrations/src/plaud/: client.rs  mod.rs  sync.rs  types.rs
crates/screenpipe-screen/src/: frame_comparison.rs  lib.rs
crates/screenpipe-screen/tests/: capture_retry_test.rs  empty_window_name_test.rs  (+1 more)
crates/screenpipe-server/: Cargo.toml
(+47 files in other folders)
