[package]
name = "screenpipe-integrations"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
image = { workspace = true }
reqwest = { workspace = true }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "chrono"] }
screenpipe-core = { path = "../screenpipe-core" }
screenpipe-db = { path = "../screenpipe-db" }
tracing = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
eventkit-rs = { version = "0.1", features = ["reminders"] }
objc2 = "0.6"
objc2-event-kit = "0.3"
objc2-foundation = "0.3"
chrono = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "ApplicationModel_Appointments",
    "Foundation",
    "Foundation_Collections",
] }
chrono = "0.4"
